<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoRC</string>
    <string name="action_btstatus_disconnected">Disconnected</string>
    <string name="action_btstatus_connected">Connected-></string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="bt_notsupported">Sorry. This device does not support Bluetooth.</string>
    <string name="title_activity_not_bt">Bluetooth not found</string>
    <string name="close">Close</string>
    <string name="ultrasonic">Ultrasonic</string>
    <string name="linetracking">LineTracking</string>
    <string name="joystick">Joystick</string>
    <string name="stop">Stop</string>
    <string name="devices">Devices</string>
    <string name="MY_UUID">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="left">Left</string>
    <string name="forward">Forward</string>
    <string name="right">Right</string>
    <string name="back">Back</string>
    //Standard SerialPortService ID
    <color name="blue">#009FE3</color>



</resources>
