<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/ultrasonic"
            android:onClick="ultrasonic"
            android:id="@+id/ultrasonicButton"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/linetracking"
            android:onClick="tracking"
            android:id="@+id/linetrackingButton"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/joystick"
            android:onClick="joystick"
            android:id="@+id/joystickButton"
            android:layout_weight="1" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/stop"
            android:id="@+id/stopButton"
            android:onClick="stop"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forward"
        android:src="@drawable/forward"
        android:contentDescription="@string/forward"
        android:onClick="forward"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left"
        android:src="@drawable/left"
        android:layout_below="@+id/forward"
        android:layout_toStartOf="@+id/back"
        android:onClick="left"
        android:contentDescription="@string/left"
        android:layout_toLeftOf="@+id/back" />

    <ImageButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right"
        android:src="@drawable/right"
        android:onClick="right"
        android:contentDescription="@string/right"
        android:layout_above="@+id/back"
        android:layout_toRightOf="@+id/forward"
        android:layout_toEndOf="@+id/forward" />

    <ImageButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:src="@drawable/back"
        android:onClick="back"
        android:contentDescription="@string/back"
        android:layout_below="@+id/left"
        android:layout_toLeftOf="@+id/right"
        android:layout_toStartOf="@+id/right" />


</RelativeLayout>
